WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33054
SVGResourceClipper needs to invalidate content
https://bugs.webkit.org/show_bug.cgi?id=33054
Summary
SVGResourceClipper needs to invalidate content
Dirk Schulze
Reported
2009-12-30 07:03:50 PST
SVGResourceClipper needs to invalidate content after changes of attributes or childs.
Attachments
invalidate SVGClipperResource
(4.78 KB, patch)
2009-12-30 07:12 PST
,
Dirk Schulze
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2009-12-30 07:12:08 PST
Created
attachment 45663
[details]
invalidate SVGClipperResource
WebKit Review Bot
Comment 2
2009-12-30 07:17:08 PST
style-queue ran check-webkit-style on
attachment 45663
[details]
without any errors.
Eric Seidel (no email)
Comment 3
2009-12-30 09:39:10 PST
Comment on
attachment 45663
[details]
invalidate SVGClipperResource OK.
WebKit Commit Bot
Comment 4
2009-12-30 09:50:43 PST
Comment on
attachment 45663
[details]
invalidate SVGClipperResource Clearing flags on attachment: 45663 Committed
r52665
: <
http://trac.webkit.org/changeset/52665
>
WebKit Commit Bot
Comment 5
2009-12-30 09:50:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug