2009-12-30  Dirk Schulze  <krit@webkit.org>

Reviewed by Eric Seidel.

        SVGResourceClipper needs to invalidate content
        https://bugs.webkit.org/show_bug.cgi?id=33054

        Added invalidate() to SVGResourceClipper to reset clipData
        and drawing area after attribute changes.

        This fixes two LayoutTests.

        * svg/graphics/SVGResourceClipper.cpp:
        (WebCore::SVGResourceClipper::resetClipData):
        (WebCore::SVGResourceClipper::invalidate):
        * svg/graphics/SVGResourceClipper.h:
2009-12-30  Dirk Schulze  <krit@webkit.org>

        Reviewed by Eric Seidel.

        SVGResourceClipper needs to invalidate content
        https://bugs.webkit.org/show_bug.cgi?id=33054

        Drawing area should change after attribute changes in clipPath or
        it's childs.

        * platform/mac/svg/custom/clip-path-child-changes-expected.txt:
        * platform/mac/svg/custom/clip-path-units-changes-expected.txt:


Canonical link: https://commits.webkit.org/44078@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52665 268f45cc-cd09-0410-ab3c-d52691b4dbfc