WebCore/svg/graphics/SVGResourceClipper.cpp
@@ -51,6 +51,13 @@ SVGResourceClipper::~SVGResourceClipper()
 void SVGResourceClipper::resetClipData()
 {
     m_clipData.clear();
+    m_clipperBoundingBox = FloatRect();
+}
+
+void SVGResourceClipper::invalidate()
+{
+    SVGResource::invalidate();
+    resetClipData();
 }
 
 FloatRect SVGResourceClipper::clipperBoundingBox(const FloatRect& objectBoundingBox)
